--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
@@ -23,4 +23,55 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.splash-screen {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100vh;
+  padding-bottom: 50px;
+}
+
+.splash-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.loading-text {
+  margin-top: 20px;
+  font-size: 26px;
+}
+
+.progress-bar-container {
+  width: 120px;
+  height: 6px;
+  background-color: #ccc;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  width: 30%;
+  height: 100%;
+  background-color: red;
+  border-radius: 5px;
+}
+
+
+.bottom-sheet {
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+.bottom-sheet::-webkit-scrollbar {
+  display: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .bottom-sheet {
+    transition: transform 0.3s ease-in-out;
+  }
 }
